@@ -33,6 +33,7 @@ NEWS
   * fix scgi HTTP/1.* status parsing (#1638), found by met@uberstats.com
   * [tests] fixed system, use foreground daemons and waitpid
   * [tests] removed pidfile from test system
+  * [tests] fixed tests needing php running (if not running on port 1026, search php in env[PHP] or /usr/bin/php-cgi)
 
 - 1.4.19 - 2008-03-10
 
